k8s/policies/templates/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: petclinic-strict-mtls
  namespace: petclinic
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: monitoring-strict-mtls
  namespace: monitoring
spec:
  mtls:
    mode: STRICT
